css/style.css
/******* Variables *******/
:root {
    /* palettes */

    /* layout */
    --layout-bottom: 100px;
    --layout-side-xs: 40px;
    --layout-side-sm: 200px;

    /* commons */
    --container: 1080px;
    --main-header-height: 80px;
}


/******* Resets *******/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}


/******* Generics *******/
body {
    font-family: 'Montserrat', sans-serif;
}

p {
    margin-bottom: 2rem;
}

a {
    text-decoration: none;
}

ul {
    list-style: none;
}


/******* Utils *******/
/* Misc */
.container {
    max-width: var(--container);
    margin-left: auto;
    margin-right: auto;
}

.img-fluid {
    max-width: 100%;
    height: auto;
    display: block;
}


/******* Layout *******/
/* App Layout */
.app-layout-top {
    height: calc(100vh - var(--layout-bottom));
    display: flex;
}

.app-layout-bottom {
    height: var(--layout-bottom);
}

.app-layout-side {
    flex: 0 0 var(--layout-side-xs);

    /* TODO REMOVE*/
    word-break: break-all;
}

.app-layout-content {
    flex-grow: 1;
    overflow-y: auto;
}


/* Flex Grid */
.row {
    display: flex;
    flex-wrap: wrap;
    row-gap: 2rem;
    margin-left: -1rem;
    margin-right: -1rem;
}

.row > * {
    padding: 0 1rem;
}

.col {
    flex-grow: 1;
}

.col-33 {
    flex-basis: calc(100% / 3);
}

.col-40 {
    flex-basis: 40%;
}

.col-60 {
    flex-basis: 60%;
}

.col-66 {
    flex-basis: calc(100% / 3 * 2);
}


/******* Debug *******/
.db-border {
    border: 2px dashed #000;
}

.db-height {
    min-height: 500px;
}

.db-red {
    background-color: red;
}

.db-yellow {
    background-color: yellow;
}

.db-blue {
    background-color: blue;
}

.db-green {
    background-color: green;
}

.db-cyan {
    background-color: cyan;
}

.db-purple {
    background-color: purple;
}


/* ====================================== */
/******* Buttons *******/
.btn {
    display: inline-block;
    text-decoration: none;
    text-align: center;
    border: 1px solid transparent;
    cursor: pointer;
    
    padding: 6px 12px;
    color: #000;
    background-color: transparent;
}


/******* Content Header *******/
.content-header {
    height: var(--main-header-height);
    padding: 1.5rem;
    text-align: right;

    position: sticky;
    top: 0;
    left: 0;

    /* TODO REMOVE*/
    opacity: 0.5;
}


/******* Content Navbar *******/
.content-navbar ul {
    display: flex;
    justify-content: center;
    height: 40px;
}

.content-navbar a {
    display: flex;
    align-items: center;
    padding: 0 1rem;
    height: 100%;
}

/*********************************
 # RESPONSIVE
 *********************************/

 @media screen and (min-width: 576px) {
    
    /* App Layout */
    .app-layout-side {
        flex-basis: var(--layout-side-sm);
    }
 }

